updates to lecture 2.2

--- a/course-materials/discussion/week2/week2-slides.qmd
+++ b/course-materials/discussion/week2/week2-slides.qmd
@@ -83,7 +83,7 @@ Since 2018, participants of all skill levels have imported, wrangled, and visual
 
 <hr>
 
-The TidyTuesday community wrangled and visualized USDM data back in 2021 ([2021-07-20, week 30](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-07-20/readme.md){target="_blank"}), so we'll use the `{tidytuesdayR}` package to import some <sup>*</sup>minimally-tidied data.
+The TidyTuesday community wrangled and visualized USDM data back in 2021 ([2021-07-20, week 30](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-07-20/readme.md){target="_blank"}), so we'll import some <sup>*</sup>minimally-tidied data directly from the TidyTuesday GitHub repository.
 
 ```{r}
 #| eval: true
