--- a/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
@@ -690,7 +690,7 @@ Anscombe's Quartet
 ::: {.column width="50%"}
 ::: {.center-text}
 Datasaurus Dozen  
-([Matejka & Fitzmaurice 2017](https://doi.org/10.1145/3025453.3025912){target="_blank"}, expanding upon Albert Cairo's [Datasaurus](http://www.thefunctionalart.com/2016/08/download-datasaurus-never-trust-summary.html){target="_blank"})
+([Matejka & Fitzmaurice 2017](https://doi.org/10.1145/3025453.3025912){target="_blank"}, expanding upon Alberto Cairo's [Datasaurus](http://www.thefunctionalart.com/2016/08/download-datasaurus-never-trust-summary.html){target="_blank"})
 :::
 :::
 
@@ -911,7 +911,7 @@ knitr::include_graphics("images/week1/vertices.png")
 ```
 
 ::: footer
-Vertices of Communication by [Albert Cairo](https://www.albertocairo.com/){target="_blank"}, as presented by [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"} during his 2022 [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop ([slides](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/materials/04_data_communication.pdf){target="_blank"})
+Vertices of Communication by [Alberto Cairo](https://www.albertocairo.com/){target="_blank"}, as presented by [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"} during his 2022 [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop ([slides](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/materials/04_data_communication.pdf){target="_blank"})
 :::
 
 ---
