--- a/resources.qmd
+++ b/resources.qmd
@@ -13,7 +13,7 @@ toc: true
 - **[ggplot2: Elegant Graphics for Data Analysis (3e)](https://ggplot2-book.org/), by Hadley Wickham, Danielle Navarro, and Thomas Lin Pedersen** -- helpful for understanding the underlying theory of ggplot2 graphics (NOTE: this is currently (as of November 2023) a work-in-progress, and as the authors put it, "a dumping ground for ideas...we don't recommend reading it" -- it's still worth noting its existence so that you can return to it in the future!)
 - **[Data Visualization: A practical introduction](https://socviz.co/), by Kieran Healy** -- a hands-on intro to the principles and practice of looking at and presenting data using R and ggplot.
 - **[Hands-On Data Visualization](https://handsondataviz.org/index.html), by Jack Dougherty and Ilya Ilyankou** -- learn how to tell stories with your data using drag-and-drop tools (e.g. Google Sheets, Datawrapper, Tableau Public)
-- **[The Truthful Art: Data, Charts, and Maps for Communication](https://www.amazon.com/gp/product/0321934075/), by Albert Cairo** -- a guide to understanding information graphics and visualization (I have a hard copy if you'd like to borrow it)
+- **[The Truthful Art: Data, Charts, and Maps for Communication](https://www.amazon.com/gp/product/0321934075/), by Alberto Cairo** -- a guide to understanding information graphics and visualization (I have a hard copy if you'd like to borrow it)
 - **[A ggplot2 Tutorial for Beautiful Plotting in R](https://www.cedricscherer.com/2019/08/05/a-ggplot2-tutorial-for-beautiful-plotting-in-r/), by Cédric Scherer** -- a blog post that might as well be a book; an excellent introduction to many different ggplot options, ideas, and extension packages
 
 ## Chart types {#chart-types}
