--- a/course-materials/lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd
+++ b/course-materials/lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd
@@ -75,7 +75,7 @@ knitr::include_graphics("images/week2/thaler-exams.png")
 ```
 
 ::: {.body-text-s .gray-text .center-text}
-Albert Cairo's visualization of the scores from Thaler's exam case study, from [The Truthful Art](https://www.amazon.com/gp/product/0321934075/){target="_blank"}
+Alberto Cairo's visualization of the scores from Thaler's exam case study, from [The Truthful Art](https://www.amazon.com/gp/product/0321934075/){target="_blank"}
 :::
 
 ---
@@ -122,7 +122,7 @@ Albert Cairo's visualization of the scores from Thaler's exam case study, from [
 :::
 
 ::: {.right-align-text}
--Albert Cairo^1^, in his book, [*The Truthful Art*](https://www.amazon.com/Truthful-Art-Data-Charts-Communication/dp/0321934075){target="_blank"}
+-Alberto Cairo^1^, in his book, [*The Truthful Art*](https://www.amazon.com/Truthful-Art-Data-Charts-Communication/dp/0321934075){target="_blank"}
 :::
 
 ::: footer
@@ -166,7 +166,7 @@ countdown::countdown(
 [How would you **map the unemployment rates to visual properties** in a way that enables your readers to accurately compare values without having to read all the numbers?]{.body-text-m}
 
 ::: footer
-Example adapted from Albert Cairo's, *The Truthful Art*
+Example adapted from Alberto Cairo's, *The Truthful Art*
 :::
 
 ---
@@ -202,7 +202,7 @@ Example adapted from Albert Cairo's, *The Truthful Art*
 ::::
 
 ::: footer
-Graphs recreated based on Albert Cairo's example (Fig 5.2) in *The Truthful Art*
+Graphs recreated based on Alberto Cairo's example (Fig 5.2) in *The Truthful Art*
 
 **For all graphics: A (22%), B (25%), C (34%), D (29%), E (32%)**
 :::
@@ -233,7 +233,7 @@ William S. Cleveland & Robert McGill (1984) **Graphical Perception: Theory, Expe
 
 - successful charts are constructed based on elementary tasks "as high in the hierarchy as possible"
 
-[[Albert Cairo's recreation](https://badriadhikari.github.io/data-viz-workshop-2021/activity-perceptual-task/Solution.html){target="_blank"} of Cleveland & McGill's Hierarchy of Elementary Perceptual Tasks {{< fa arrow-right title="an arrow pointing to the right" >}}]{.body-text-s .gray-text}
+[[Alberto Cairo's recreation](https://badriadhikari.github.io/data-viz-workshop-2021/activity-perceptual-task/Solution.html){target="_blank"} of Cleveland & McGill's Hierarchy of Elementary Perceptual Tasks {{< fa arrow-right title="an arrow pointing to the right" >}}]{.body-text-s .gray-text}
 
 :::
 
@@ -283,7 +283,7 @@ ggplot(circles_bars, aes(x = posx, y = posy)) +
 
 ```{r}
 countdown::countdown(
-  minutes = 1,
+  minutes = 0.5,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -317,7 +317,7 @@ ggplot(circles_bars, aes(x = size, y = id)) +
 
 ```{r}
 countdown::countdown(
-  minutes = 1,
+  minutes = 0.5,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -481,7 +481,7 @@ Bertini E, Correll M, Franconeri S (2020) [Why Shouldn't All Charts Be Scatter P
 5. [**Test the outcomes of your graphic on others,**]{.teal-text} particularly on those who are representative of the audience you are trying to reach.
 
 ::: footer
-[*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s}
+[*Most of the above tips are adapted from [Alberto Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s}
 :::
 
 <!-- --- -->
@@ -503,7 +503,7 @@ Bertini E, Correll M, Franconeri S (2020) [Why Shouldn't All Charts Be Scatter P
 <!-- 5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text} -->
 
 <!-- ::: footer -->
-<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- [*Most of the above tips are adapted from [Alberto Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
 <!-- ::: -->
 
 ---
@@ -717,7 +717,7 @@ knitr::include_graphics("images/week2/horst-nom-org-binary.png")
 <!-- 5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text} -->
 
 <!-- ::: footer -->
-<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- [*Most of the above tips are adapted from [Alberto Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
 <!-- ::: -->
 
 ---
@@ -896,7 +896,7 @@ Our choropleth map displays 5-year precipitation as compared to the 20th century
 <!-- 5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text} -->
 
 <!-- ::: footer -->
-<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- [*Most of the above tips are adapted from [Alberto Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
 <!-- ::: -->
 
 ---
@@ -931,7 +931,7 @@ knitr::include_graphics("images/week2/cairo-advertising-v1.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Images from [Albert Cairo's *The Truthful Art*](https://www.albertocairo.com/){target="_blank"}
+Images from [Alberto Cairo's *The Truthful Art*](https://www.albertocairo.com/){target="_blank"}
 :::
 :::
 
@@ -990,7 +990,7 @@ knitr::include_graphics("images/week2/cairo-advertising-v2.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Images from [Albert Cairo's *The Truthful Art*](https://www.albertocairo.com/){target="_blank"}
+Images from [Alberto Cairo's *The Truthful Art*](https://www.albertocairo.com/){target="_blank"}
 :::
 :::
 
@@ -1126,7 +1126,7 @@ Example from Claus Wilke's, [Fundamentals of Data Visualization](https://clauswi
 <!-- 5. [**Test the outcomes of your graphic on others,**]{.teal-text} particularly on those who are representative of the audience you are trying to reach. -->
 
 <!-- ::: footer -->
-<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- [*Most of the above tips are adapted from [Alberto Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
 <!-- ::: -->
 
 ---
@@ -1150,7 +1150,7 @@ knitr::include_graphics("images/week2/iraq-deaths.png")
 ```
 
 ::: {.center-text .gray-text .body-text-s}
-Source: [Iraq's bloody toll](https://www.scmp.com/infographics/article/1284683/iraqs-bloody-toll){target="_blank"}.
+Source: [Iraq's bloody toll](https://www.scmp.com/infographics/article/1284683/iraqs-bloody-toll){target="_blank"}, by [Simon Scarr](https://www.simonscarr.com/){target="_blank"}
 :::
 
 :::
@@ -1172,7 +1172,7 @@ Source: [Iraq's bloody toll](https://www.scmp.com/infographics/article/1284683/i
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2.5,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -1231,7 +1231,7 @@ Source: [This Chart Shows An Alarming Rise In Florida Gun Deaths After 'Stand Yo
 
 ```{r}
 countdown::countdown(
-  minutes = 3,
+  minutes = 2.5,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -1288,7 +1288,7 @@ knitr::include_graphics("images/week2/gun-deaths-original.png")
 
 ::: footer
 ::: {.gray-text .center-text}
-Critique by Albert Cairo in his post [In visualization, baselines and negative space matter](http://www.thefunctionalart.com/2014/04/in-visualization-baselines-and-negative.html){target="_blank"}
+Critique by Alberto Cairo in his post [In visualization, baselines and negative space matter](http://www.thefunctionalart.com/2014/04/in-visualization-baselines-and-negative.html){target="_blank"} (NOTE 2025-01-10: link broken, haven't found replacement)
 :::
 :::
 
